--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -151,3 +151,13 @@ code[data-line-numbers-max-digits="2"] > [data-line]::before {
 code[data-line-numbers-max-digits="3"] > [data-line]::before {
   width: 3rem;
 }
+
+article img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
+  height: auto;
+  
+  border-radius: 8px; /* Ajoute des coins arrondis */
+}
